minor title fix

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "title": "Custom Region Folding",
+    "title": "Custom Region Code Folding",
     "name": "brackets-custom-region-code-folding",
     "version": "1.0.0",
     "author": "Patrick Oladimeji <patrick@dustygem.co.uk>",
